# datascope-agent

./: .env.example  .gitignore  AGENT_WALKTHROUGH.md  AI_ENGINEERING_LESSONS.md  CLAUDE.md  DEVELOPMENT_JOURNEY.md  DataScope_End_to_End_Architecture.md  GALILEO_INTERVIEW_PREP.md  LANGGRAPH_ARCHITECTURE_JOURNEY.md  LANGGRAPH_DEPLOYMENT_DEBUGGING.md  LANGGRAPH_IMPLEMENTATION_PLAN.md  MCP_DEVELOPMENT_JOURNEY.md  README.md  SYSTEM_DESIGN_INTERVIEW.md  TODO.md  pyproject.toml
config/: mcp_config.json  pattern_library.json  test_cases.json
datascope-langgraph-app/: .gitignore  README.md  app.py  app.yaml.example  requirements.txt  test_mcp_client.py
datascope-langgraph-app/agent/: __init__.py  config.py  graph.py  observability.py  prompts.py  tools.py
datascope-mcp-server/: .gitignore  DESIGN_DECISIONS.md  README.md  app.py  app.yaml  requirements.txt
datascope-mcp-server/scripts/: setup_vector_search.py
datascope-ui-app/: app.py  app.yaml.example  requirements.txt
datascope-vercel-app/: .env.example  README.md  package-lock.json  package.json
datascope-vercel-app/app/: globals.css  layout.tsx  page.tsx
datascope-vercel-app/components/: AuthButton.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx
datascope-vercel-app/lib/agent/: index.ts  prompts.ts  tools.ts
datascope-vercel-app/lib/auth/: databricks-oauth.ts  session.ts
datascope-vercel-app/lib/mcp/: client.ts
datascope-vercel-app/lib/observability/: galileo.ts
docs/: ARCHITECTURE_DECISIONS.md
github-mcp-app/: README.md  app.yaml.example  mcp_server.py  pyproject.toml  requirements.txt  simple_app.py
github-mcp-app/server/: app.py  main.py  tools.py
notebooks/: setup_lakebase.py  setup_mlflow_monitoring.py  setup_vector_search.py
sql/gold/: arr_by_customer.sql  churn_predictions.sql
src/datascope/: __init__.py  cli.py
src/datascope/agent/: __init__.py  graph.py  prompts.py  state.py
src/datascope/evaluation/: __init__.py
tests/: test_basic.py
(+10 files in other folders)
